# bridgewater-hack

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_hf_access.py  test_setup.py
configs/: channel_catalog.yaml  event_catalog.csv  svar_lookup.yaml
configs/specialist_prompts/: behavioral.md  financial_conditions.md  international.md  monetary.md  supply_chain.md
notebooks/: demo_hormuz.ipynb
src/: schemas.py  variable_labels.py
src/agents/: _client.py  adversary.py  coordinator.py  event_researcher.py  policy_parser.py  reviewer.py  specialists.py  synthesizer.py
src/empirics/: analog_retrieval.py  event_study.py  level_regression.py  plotting.py  router.py  svar_lookup.py
src/graph/: builder.py
src/loaders/: __init__.py  core.py  extended.py  fallback.py
src/pipeline/: orchestrator.py  pruner.py
src/ui/: app.py
src/ui/static/: index.html
tests/: test_agents.py  test_empirics.py  test_orchestrator.py  test_pipeline.py
